[metadata]
name = reducss
version = attr: reducss.__version__
author = Laddge
author_email = dev.laddge@gmail.com
description = simple & flexible SSG
url = https://github.com/laddge/reducss
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.5.0
